--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,42 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+header {
+  box-shadow: 4px 2px 27px -17px rgb(0, 0, 0);
+  -webkit-box-shadow: 4px 2px 27px -17px rgb(0, 0, 0);
+  -moz-box-shadow: 4px 2px 27px -17px rgb(0, 0, 0);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+header img {
+  justify-content: flex-start;
+  width: 50px;
+  height: 50px;
+}
+header ul {
+  display: flex;
+  flex-direction: row;
+  font-size: small;
+  gap: 2rem;
+  font-weight: 600;
+}
+header ul .select {
+  display: none;
+}
+header ul .select:hover .select {
+  display: block;
+}
+header ul:hover {
+  color: orange;
+  text-decoration: underline;
+}
+
 h2 {
   font-family: "Nunito", sans-serif;
+}
+
+ul {
+  list-style-type: none;
 }
