--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,14 +4,23 @@
 body{
     font-family: 'Nunito', sans-serif;
 }
-header{
-    box-shadow: 4px 2px 27px -17px rgba(0,0,0,1);
-    -webkit-box-shadow: 4px 2px 27px -17px rgba(0,0,0,1);
-    -moz-box-shadow: 4px 2px 27px -17px rgba(0,0,0,1);
+.top{
+    box-shadow: 0px 0px 27px -17px rgba(0,0,0,1);
+    -webkit-box-shadow: 0px 0px 27px -17px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 0px 27px -17px rgba(0,0,0,1);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+
+    .buy:hover{
+        padding: 0.25rem;
+        border: 1px solid black;
+        border-radius: 0% 15% 15% 15%;
+        background-color: orange;
+        color: white;
+    }
    
     img{
         justify-content: flex-start;
@@ -25,25 +34,43 @@ header{
         font-size: small;
         gap: 2rem;
         font-weight: 600;
-        
-        .select{
-            display: none;
-            &:hover{
-                .select{
-                    display: block;
-                }
-            } 
-           }
 
-        &:hover{
-            color: orange;
-            text-decoration: underline;
+        .boarding{
+            &:hover{
+                color: orange;
+                text-decoration: underline;
+            }
+          }
+        .toys{
+            &:hover{
+                color: orange;
+                text-decoration: underline;
+            }
         }
-        
+        .school{
+            &:hover{
+                color: orange;
+                text-decoration: underline;
+            }
+          }
+      }   
+
+      
+      .select{
+        display: none;
+        &:hover{
+            display: block;
         }
     }
-    
-
+    }
+.title{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+}
 h2{
     font-family: 'Nunito', sans-serif;
 }
